# game_of_life

./: CMakeLists.txt  README.md
.cache/clangd/index/: Main.cpp.CF6F9BE86AACD240.idx  PixelManager.cpp.A9294B8EE08BA056.idx  PixelManager.h.3EC7363455034123.idx  ScreenWindow.cpp.BA48B5C712BD2858.idx  ScreenWindow.h.72C9010087912256.idx  _fixes.hpp.676C5A7EE22FFDB2.idx  _matrix_vectorize.hpp.8AF3B4548C4BECFF.idx  _noise.hpp.190C9C640E011F34.idx  _vectorize.hpp.A3871C2D859B34D9.idx  associated_min_max.hpp.46933AC2245D6A87.idx  associated_min_max.inl.134402E1C383B084.idx  bit.hpp.D22331E7DD592F36.idx  bit.inl.9B229437B64C6749.idx  bitfield.hpp.796CE5CC10DD55EC.idx  bitfield.inl.F64FE0F3B444B8AF.idx  closest_point.hpp.BA875E13B34E0023.idx  closest_point.inl.19E18AEC8C4E753A.idx  color_encoding.hpp.2A6CA7877D18F8C3.idx  color_encoding.inl.0FD3545BC655EFF8.idx  color_space.hpp.4CA1E92A41F1BED1.idx  color_space.hpp.55D27B3FF36FED6B.idx  color_space.inl.18FB747BBB4381F3.idx  color_space.inl.B89E2939D33D83B0.idx  color_space_YCoCg.hpp.D59881540C8F8DE7.idx  color_space_YCoCg.inl.548DDFC8DB54D5E2.idx  common.hpp.45C60E1360CFFA35.idx  common.hpp.D1B45E77C1DA6008.idx  common.inl.F2D4C75B93AC3172.idx  compatibility.hpp.3CED848B75E4F9FC.idx  compatibility.inl.15B8261729E15B6D.idx  component_wise.hpp.052FAD871DF6D744.idx  component_wise.inl.05F1E88496C3F2B7.idx  compute_common.hpp.4128AB56000828D1.idx  compute_vector_decl.hpp.DB2436306CFB576A.idx  compute_vector_relational.hpp.ADBA6F8CFF8E4CF7.idx  constants.hpp.FFFFA3CCAE55FDEE.idx  constants.inl.C8539C324140D3D6.idx  context.c.794A6AB722B5CAF8.idx  dual_quaternion.hpp.F411F22F92EBDFBE.idx  dual_quaternion.inl.C0A20186C4404ADB.idx  (+396 more)
src/: Main.cpp
